--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -180,6 +180,50 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp" />
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:background="@drawable/light_grey_background"
+                        android:orientation="horizontal"
+                        android:padding="15dp"
+                        android:weightSum="10">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="5"
+                            android:text="Gross Value:"
+                            android:textColor="@color/font_color_main"
+                            android:textSize="@dimen/text_size_1"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/gross_value"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="5"
+                            android:textAlignment="textEnd"
+                            android:textColor="@color/font_color_main"
+                            android:textSize="@dimen/text_size_1" />
+
+                    </LinearLayout>
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Item Summary"
+                        android:layout_marginBottom="10dp">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/item_summary"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:enabled="false"
+                            android:focusable="false"
+                            android:textColor="@color/font_color_main"
+                            />
+                    </com.google.android.material.textfield.TextInputLayout>
+
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -203,11 +247,13 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp">
+
                         <Button
                             android:id="@+id/button"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginEnd="24dp"
+                            android:layout_marginStart="32dp"
+                            android:layout_marginEnd="32dp"
                             android:backgroundTint="#e6e3dc"
                             android:onClick="@{()->vm.onClickSubmitBtn()}"
                             android:paddingStart="20dp"
@@ -220,26 +266,27 @@
                             android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                        <TextView
-                            android:id="@+id/order_value"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="24dp"
-                            android:layout_marginBottom="8dp"
-                            android:background="@drawable/light_grey_background"
-                            android:hint="Gross Value: \n120000 Tk"
-                            android:paddingStart="15dp"
-                            android:paddingTop="5dp"
-                            android:paddingEnd="15dp"
-                            android:paddingBottom="5dp"
-                            android:textAlignment="center"
-                            android:textColor="@color/font_color_main"
-                            android:textSize="@dimen/text_size_1"
-                            app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
+
+<!--                        <TextView-->
+<!--                            android:id="@+id/order_value"-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_marginStart="24dp"-->
+<!--                            android:layout_marginBottom="8dp"-->
+<!--                            android:background="@drawable/light_grey_background"-->
+<!--                            android:hint="Gross Value: \n120000 Tk"-->
+<!--                            android:paddingStart="15dp"-->
+<!--                            android:paddingTop="5dp"-->
+<!--                            android:paddingEnd="15dp"-->
+<!--                            android:paddingBottom="5dp"-->
+<!--                            android:textAlignment="center"-->
+<!--                            android:textColor="@color/font_color_main"-->
+<!--                            android:textSize="@dimen/text_size_1"-->
+<!--                            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                            app:layout_constraintStart_toStartOf="parent"-->
+<!--                            app:layout_constraintTop_toTopOf="parent" />-->
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </LinearLayout>
