--- a/app/src/main/res/layout/listitem_order_line.xml
+++ b/app/src/main/res/layout/listitem_order_line.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <import type="android.view.View"/>
         <variable
             name="vm"
             type="com.akg.akg_sales.dto.order.OrderLineDto" />
@@ -52,6 +53,14 @@
             android:weightSum="10"
             android:gravity="center"
             android:baselineAligned="false">
+<!--            <TextView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Canceled"-->
+<!--                android:textStyle="bold"-->
+<!--                android:visibility="@{vm.lineCanceled?View.VISIBLE:View.GONE}"-->
+<!--                android:textSize="@dimen/text_size_1"-->
+<!--                android:textColor="@color/font_color_red"/>-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -110,15 +119,52 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:gravity="center">
+
                     <TextView
                         android:layout_width="wrap_content"
-                        android:textAlignment="center"
-                        android:text="Requested"
-                        android:textSize="18sp"
                         android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:text="Req"
+                        android:textAlignment="center"
                         android:textColor="@color/font_color_main"
-                        android:textStyle="bold"
-                        android:padding="5dp" />
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+<!--                    android:background="@drawable/white_background"-->
+                    <TextView
+                        android:id="@+id/initial_quantity"
+                        android:inputType="none"
+                        android:focusable="false"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{vm.initialQuantity.toString()}"
+                        android:textColor="@color/font_color_main"
+                        android:textStyle="italic"
+                        android:textAlignment="center"
+                        android:textSize="18sp"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        android:paddingStart="15dp"
+                        android:paddingEnd="15dp"
+                        android:hint="5.0"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:layout_marginStart="10dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:text="Apr"
+                        android:textAlignment="center"
+                        android:textColor="@color/font_color_main"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
                     <EditText
                         android:id="@+id/quantity"
@@ -143,27 +189,31 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:gravity="center"
-                    android:layout_marginStart="15dp">
+                    android:layout_marginStart="10dp">
+
+
                     <TextView
                         android:layout_width="wrap_content"
-                        android:textAlignment="center"
-                        android:text="Booked"
-                        android:textSize="18sp"
                         android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:text="Bkd"
+                        android:textAlignment="center"
                         android:textColor="@color/font_color_main"
-                        android:textStyle="bold"
-                        android:padding="5dp" />
-                    <EditText
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+<!--                    android:background="@drawable/white_background"-->
+                    <TextView
                         android:id="@+id/bookedQuantity"
                         android:inputType="none"
                         android:focusable="false"
                         android:layout_width="wrap_content"
-                        android:background="@drawable/white_background"
                         android:layout_height="wrap_content"
                         android:text="@{vm.bookedQuantity.toString()}"
                         android:textColor="@color/font_color_main"
                         android:textStyle="italic"
                         android:textAlignment="center"
+                        android:textSize="18sp"
                         android:paddingTop="10dp"
                         android:paddingBottom="10dp"
                         android:paddingStart="15dp"
